--- a/Assignment # 1/New Assignment 3.ipynb
+++ b/Assignment # 1/New Assignment 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "78e259a0",
+   "id": "644b8eb8",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d6bdd174",
+   "id": "b6129001",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eeaf065d",
+   "id": "a697ca20",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dc5e1805",
+   "id": "d180effd",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "62474e58",
+   "id": "58260e37",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b1e3139b",
+   "id": "a989197b",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3c7a5f21",
+   "id": "d4cff03a",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "90ea1bb0",
+   "id": "d1285e09",
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +203,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "7cb35a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_num_in_list( list ):\n",
+    "    max = list[ 0 ]\n",
+    "    for a in list:\n",
+    "        if a > max:\n",
+    "            max = a\n",
+    "    return max\n",
+    "print(max_num_in_list([1, 2, 4, 5, 6, -8, -9, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d72ae150",
+   "id": "c2f368cd",
    "metadata": {},
    "outputs": [],
    "source": []
